# TrackNetV3

./: .gitignore  CMakeLists.txt  DYNOv3.py  dataset.py  detect_back_side_view_angle.cc  predict.py  requirements.txt  simple_scene_classifier  test.py  train.py  video_scene_detector.cc
dinov3/: CMakeLists.txt  CMakeLists_simple.txt  DINOv3_Scene_Detection_Guide.md  DINOv3_infer.py  DINOv3_load.py  DINOv3_trace.py  README.md  clean_build.sh  dinov3_image_processor.cc  dinov3_inference.cc  dinov3_simple_test.cc  dinov3_working.cc  frame_features.csv  requirements.txt  scene_classifier.cc  scene_detection_results.txt  simple_scene_classifier.cc  video_scene_detector.cc
dinov3/results/: scene_detection_results.txt
results/: scene_detection_results.txt
